--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
 path {
     stroke: white;
     fill:paleturquoise !important;
 
     transition: fill .4s ease;
+    transform-origin: center center;
 }
 
 path:hover {
-    fill: orange !important;
+    fill: rgb(255, 0, 89) !important;
+    cursor: pointer;
+    transform: scale(1.005, 1.005);
+}
+
+#map-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #us-map {
@@ -21,6 +28,8 @@ path:hover {
 }
 
 #details-box {
+    box-shadow: 0px 7px 40px rgba(0, 0, 0, 0.7);
+    opacity: 0%;
     padding: 1rem;
     border-radius: 8px;
     font-size: 24px;
@@ -32,4 +41,4 @@ path:hover {
     transform: translateX(-50%);
     transition: opacity .4s ease;
     z-index: 1;
-} */
+}
